# django-guestbook-project

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
guestbooks/: admin.py  apps.py  models.py  urls.py  views.py
guestbooks/migrations/: 0001_initial.py
